# stfo-colbert

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  transform_tsv.py
example_data/: wikipedia_20231101_en.py
src/stfo_colbert/: __init__.py  cli.py  dataset.py  indexer.py  server.py  utils.py
tests/: test_collection.py  test_dataset.py  test_server.py
