[project]
name = "stfo-colbert"
version = "0.1.0"
description = "Straightforward ColBERT indexing and serving (via PyLate)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pylate>=1.3.4",
    "pymupdf>=1.26.5",
    "langchain-text-splitters>=1.0.0",
]

[project.scripts]
stfo-colbert = "stfo_colbert.cli:main"

[project.urls]
Repository = "https://github.com/j-labs/stfo-colbert"
Homepage = "https://github.com/j-labs/stfo-colbert"

[tool.setuptools]
exclude-package-data = {"*" = ["example_data/*", "tests/*", "stfo_indexes/*"]}

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
